[gd_scene load_steps=12 format=2]

[ext_resource path="res://pics/fader2.png" type="Texture" id=1]
[ext_resource path="res://fonts/BitmapText.tscn" type="PackedScene" id=2]
[ext_resource path="res://effects/FaderArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/TGameOptions.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/TGameScene.gd" type="Script" id=5]
[ext_resource path="res://items/TJoystick.tscn" type="PackedScene" id=6]
[ext_resource path="res://pics/stick_home.png" type="Texture" id=7]
[ext_resource path="res://pics/stick_action.png" type="Texture" id=9]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float cut:hint_range(0.0, 1.0) = 0.0;
uniform vec4 acolor:hint_color;

void fragment()
{
	float tone = texture(TEXTURE,UV).r;
	if (cut>=1.0 || tone<cut-0.1)
		tone=1.0;
	else if (tone<cut)
		tone=0.5;
	else 
		tone=0.0;
	COLOR = vec4(acolor.r,acolor.g,acolor.b,tone);
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/cut = 1.0
shader_param/acolor = Color( 0, 0, 0, 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[node name="Game" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )

[node name="Scene" type="Node2D" parent="."]
pause_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Scores" type="Node2D" parent="CanvasLayer"]

[node name="Score0" parent="CanvasLayer/Scores" instance=ExtResource( 2 )]
position = Vector2( 160, 5 )
text = "SCORE-000000 HI-000000 REST-00"
textalign = 4
waves = 2.0
wavesize = 1.0
wavespeed = 85.339

[node name="Score1" parent="CanvasLayer/Scores" instance=ExtResource( 2 )]
position = Vector2( 160, 14 )
text = "PYRAMID-00"
textalign = 4
waves = 2.0
wavesize = 1.0
wavespeed = 85.339

[node name="FaderArea" parent="CanvasLayer" instance=ExtResource( 3 )]
material = SubResource( 2 )
position = Vector2( 160, 120 )
scale = Vector2( 0.8, 0.6 )
texture = ExtResource( 1 )

[node name="StickControls" type="Node2D" parent="CanvasLayer"]

[node name="stick_action" type="TouchScreenButton" parent="CanvasLayer/StickControls"]
self_modulate = Color( 1, 1, 1, 0.313726 )
position = Vector2( 280, 200 )
normal = ExtResource( 9 )
shape = SubResource( 3 )

[node name="stick_home" type="TouchScreenButton" parent="CanvasLayer/StickControls"]
self_modulate = Color( 1, 1, 1, 0.313726 )
position = Vector2( 4, 5 )
normal = ExtResource( 7 )
shape = SubResource( 3 )

[node name="TJoystick" parent="CanvasLayer/StickControls" instance=ExtResource( 6 )]
modulate = Color( 1, 1, 1, 0.313726 )
position = Vector2( 1.25992, 187.358 )

[node name="TGameOptions" parent="CanvasLayer" instance=ExtResource( 4 )]
visible = false
margin_left = 80.0
margin_top = 80.0
margin_right = 240.0
margin_bottom = 160.0

[connection signal="pressed" from="CanvasLayer/StickControls/stick_action" to="." method="_on_stick_action_pressed"]
[connection signal="pressed" from="CanvasLayer/StickControls/stick_home" to="." method="_on_stick_home_pressed"]
[connection signal="sig_on_change" from="CanvasLayer/StickControls/TJoystick" to="." method="_on_TJoystick_sig_on_change"]
